# clonotype_analyses

./: .gitignore  README.md  TCR_analysis.ipynb  TCR_analysis_cleanup.ipynb  convert_tcr_from_parsebio_to_10X.ipynb  html_plot.py  pyproject.toml
API_testing/: API_testing.ipynb
GSE185381_TCR/clonotypes/: UMAP_porportion.tsv  cdr3alpha_length_df.tsv  cdr3beta_length_df.tsv  clono_proportion_df.tsv  fraction_clo_df.tsv  shannon_df.tsv
GSE185381_TCR_for_API/: API_testing.ipynb
GSE185381_TCR_for_API/clinical_metadata/: GSM5613808_2020-03-18-52-Dx_clinical_metadata.tsv  GSM5613809_2020-03-18-82_clinical_metadata.tsv  GSM5613810_2020-05-22-5prime_1_clinical_metadata.tsv  GSM5613811_2020-05-22-5prime_2_clinical_metadata.tsv  GSM5613812_2020-08-07-MDS-AML_cDNA1_clinical_metadata.tsv  GSM5613813_2020-08-07-MDS-AML_cDNA2_clinical_metadata.tsv  GSM5613814_2020-10-06-5prime_cDNA3-AML051_clinical_metadata.tsv  GSM5613815_2020-10-06-5prime_cDNA5_clinical_metadata.tsv  GSM5613816_2021-04-29-0102_cDNA_clinical_metadata.tsv  GSM5613817_2021-04-29-0134_cDNA_clinical_metadata.tsv  GSM5613818_2021-04-29-0693_cDNA_clinical_metadata.tsv  GSM5613819_2021-04-29-1133_cDNA_clinical_metadata.tsv  GSM5613820_2021-04-29-2910_cDNA_clinical_metadata.tsv  GSM5613821_2021-04-29-2975_cDNA_clinical_metadata.tsv  GSM5613822_2021-04-29-3948_cDNA_clinical_metadata.tsv
api/: analyses.py  common.py  constants.py
api/common/: __init__.py  constants.py
api/compute/: clonotypes_QC_fraction.py  processing.py
clonotype_analyses/: analyses.py
clonotype_analyses/common/: constants.py
(+25 files in other folders)
